public/asset/app.css
/* ... */
.tabulator .tabulator-row {
  background: inherit;
}

.tabulator .tabulator-header {
  background: inherit;
}

.scene-fields-panel {
  display: none;
}

.root-block-display .scene-fields-panel {
  display: block;
}

.child-block-display .scene-fields-panel {
  display: none;
}

.child-block-display .asset-field-container {
  display: none;
}

.asset-fields-container, .node-details-panel, .export-frames-details-panel {
  overflow: auto;
  position: relative;
}

.data-view-container {
  border-width: 0;
  border-top-width: .15em;
}

.export-frames-details-panel {
  display: none;
  line-height: 3em;
  flex-direction: column;
  flex: 1;
}

.cblock-child-details-panel {
  display: none;
}

.root-block-display .cblock-child-details-panel,
.child-block-display .asset-fields-container {
  display: none;
}

.child-block-display .cblock-child-details-panel,
.root-block-display .asset-fields-container {
  display: block;
}

.cblock-child-details-help-panel, .cblock-details-help-panel {
  clear: both;
  flex: 1;
  overflow: auto;
}

.root-block-display .scene-fields-panel {
  overflow: auto;
}

.header_wrapper {
  padding: .25em;
}

.workspace-asset-link-display span {
  font-size: .5em;
}

.workspace-asset-link-display .img-holder {
  width: 4em;
  height: 3em;
  float: left;
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  background-image: url(/images/addimage.svg);
  margin: .25em;
  border-radius: .25em;
}

.navigate_tag_select {
  float: left;
  clear: both;
  font-weight: bold;
}

.main-band-children-select {
  max-width: calc(100% - 15em);
  float: left;
}

#workspaces-select {
  max-width: calc(100% - 12em);
  float: left;
}

.header_wrapper button {
  margin: 0 .1em;
  float: left;
}

.dataview_record_key {
  max-width: calc(100% - 17.5em);
  float: left;
  min-width: 5em;
  margin-left: .25em;
}

.dataview_record_tag {
  float: left;
}

.header_bar_top_row {
  margin-bottom: .25em;
}

.tabulator .tabulator-header .tabulator-col .tabulator-col-content .tabulator-col-title {}

.tabulator .tabulator-header .tabulator-col.tab-header-cell-large .tabulator-col-content .tabulator-col-title {
  font-size: .4em;
}

.tabulator .tabulator-header .tabulator-col.right-column-data .tabulator-col-content .tabulator-col-title {
  text-align: center;
}

.csv_data_date_span {
  margin-left: 1em;
  font-style: italic;
}

.cgenerate_panel_wrapper {
  padding: 0 .5em;
  line-height: 2.75em;
}

.animation_regeneration_needed .workspace_regenerate_layout_changes {
  background: red;
}

.workspace .add-asset-button {
  display: none;
}

.csv_import_preview {
  display: none;
  overflow: hidden;
  text-overflow: clip;
  white-space: pre;
  font-size: .8em;
  flex: 1;
}

.app-expanded .csv_import_preview {
  display: block;
  overflow-x: auto;
}

.noassetsfound {
  font-size: 2em;
  text-align: center;
  line-height: 5em;
}

.add_asset_template_panel input.new-workspace-name {
  width: 15em;
  text-align: left;
}

.child_band_picker_expanded {
  display: none;
}

.app-expanded .child_band_picker_expanded {
  display: block;
  white-space: nowrap;
  overflow-x: auto;
  text-overflow: initial;
}

.block-editor-child {
  display: inline-block;
  padding: .5em;
  margin: .25em;
  cursor: pointer;
}

.block-editor-child i {
  position: relative;
  top: .12em;
}

.frames-textarea-export {
  width: 100%;
  flex: 1;
}

.workspace_band_wrapper {
  white-space: nowrap;
  overflow-x: scroll;
}

.workspace_band_wrapper a {
  border-width: .25em;
  text-align: center;
  text-decoration: none;
  border: none;
  line-height: 1em;
  padding: .3em .25em;
  margin: .1em;
}

.add_asset_template_panel label {
  white-space: nowrap;
}

a.workspace-asset-link-display {
  text-align: center;
  display: inline-block;
  line-height: .75em;
  border-radius: .5em;
  padding: .25em;
  margin: .1em;
  white-space: nowrap;
  border: none;
}

.open_in_browser_block_child {
  float: left;
  clear: left;
  margin-top: 1em;
}

.open_in_new_block_child {
  float: left;
  margin: 1em;
  margin-top: 1em;
}

.delete_block_and_children {
  margin: .5em;
}

.main-band-sub-view-picker {
  float: left;
  margin: 0 .25em;
  padding: .15em;
}

.main-band-sub-view-picker button {
  border: none;
  margin: 0;
}

.layout_data_action_select {
  float: right;
  margin: .5em;
}

.scene_edit_image {
  max-width: 90%;
  max-height: 100px;
}

.sceneoptionsupload {
  float: right;
}

#profile-header-panel .fields-container {
  overflow: visible;
}

#profile-header-panel {
  overflow: visible;
}

dialog::backdrop {
  background: rgba(255, 255, 255, .5);
}

.dialog-header-images {
  text-align: center;
}

.dialog-header-images label span, .dialog-header-images h1 {
  font-size: 1.5em;
}

.dialog-header-images input[type="radio"] {
  transform: scale(1.5)
}

div.imagebackgrounddisplay {
  background-size: contain;
  background-position: center;
  background-repeat: no-repeat
}

.image_upload_building {
  display: none
}

.indexedit, .xedit, .yedit, .zedit, .rxedit, .ryedit, .rzedit, .pricedit {
  width: 4em;
}

table.table_export tr.header td {
  font-weight: bold;
}

table.table_export td {
  color: inherit;
  font-size:12px;
}

table.table_export td {
  padding: 2px 4px;
  margin: 0;
  text-align: left;
  overflow: hidden;
}

.block_wizard_wrapper, .mesh_wizard_wrapper, .material_wizard_wrapper, .shape_wizard_wrapper {
  flex: 1;
  overflow: hidden;
  overflow-y: auto;
  padding: 0 8px;
  text-align: left;
  line-height: 2.25em;
  text-align: left;
}

table.wizard_field_container {
  line-height: 1em;
}

table.wizard_field_container td {
  padding: 0;
  border: none;
}

table.wizard_field_container td:nth-child(1) {
  white-space: nowrap;
  padding: 0 4px 0 0;
  font-size: .6em;
}

table.wizard_field_container td:nth-child(1) b {
   font-size: inherit;
}

table.wizard_field_container td:nth-child(2) {
  width: 99%;
}

table.wizard_field_container td:nth-child(2) input {
  width: 100%;
  text-align: left;
}
/* ... */

